# ProjectNestor

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.clang-format  LICENSE  README.md  SECURITY.md  conanfile.py  justfile  pixi.toml  renovate.json
.github/workflows/: _required.yml  build-test.yml  claude-review.yml  code-coverage.yml  static-analysis.yml
cmake/: CompilerWarnings.cmake  Doxygen.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake
conan/profiles/: debug  default
include/projectnestor/: nats_client.hpp  routes.hpp  store.hpp  version.hpp
scripts/: coverage.sh  format.sh  lint.sh  test.sh
src/: main.cpp  nats_client.cpp  routes.cpp  server_main.cpp  store.cpp  version_info.cpp
stub/: Dockerfile  requirements.txt  server.py
test/: CMakeLists.txt
test/src/: test_main.cpp  test_nats_client.cpp  test_routes.cpp  test_store.cpp
